--- a/index.html
+++ b/index.html
@@ -14,5 +14,52 @@
         <img src="img/logo.svg" alt="the booleaner">
     </header>
     <!--End Header -->
+
+    <!-- Main -->
+    <main>
+        <div class="container">
+
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+
+            <div class="author">
+                Scritto da <span id="booleaner">The Booleaner</span>
+            </div>
+
+            <div class="date">
+                il 10/10/2020
+            </div>
+
+            <div>
+                <img src="img/tim-1.jpg" alt="Tim Berners-Lee 1">
+                <img src="img/tim-2.jpg" alt="Tim Berners-Lee 2">
+            </div>
+
+            <div class="description">
+                1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
+                2nd Photo: Wikimedia, by Paul Clarke
+            </div>
+
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <span>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</span>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+
+            <ul>
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
+                <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+            </ul>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
+    </main>
+    <!-- End Main -->
 </body>
 </html>
