css tabella finale

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <tr>
                         <th>Lorem ipsum dolor</th>
                         <th>Lorem ipsum dolor</th>
-                        <th>Lorem ipsum dolor</th>
+                        <th class= col>Lorem ipsum dolor</th>
                     </tr>
                 </thead>
 
@@ -62,7 +62,7 @@
                     <tr class="row">
                         <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
+                        <td class= col>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
                     </tr>
                 </tbody>
 
@@ -70,7 +70,7 @@
                     <tr>
                         <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
+                        <td class= col>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
                     </tr>
                 </tbody>
 
@@ -78,7 +78,7 @@
                     <tr class="row">
                         <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
+                        <td class= col>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</td>
                     </tr>
                 </tbody>
             </table>
